--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<html>
-第一个网页
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <div>第一一次提交</div>
+</body>
 </html>
